--- a/static/sass/_profile.scss
+++ b/static/sass/_profile.scss
@@ -150,3 +150,72 @@
   visibility: hidden;
   opacity: 0;
 }
+
+@media only screen and (max-width: 1100px) {
+  .profile {
+    .p-properties {
+      .p-btn {
+        grid-row: 4;
+      }
+
+      .username {
+        grid-column: 1/3;
+      }
+
+      .p-btn {
+        justify-self: center;
+        grid-row: 2;
+      }
+
+      #p-edit {
+        grid-column: 6;
+        grid-row: 2;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .profile {
+    top: 5em;
+
+    .p-properties {
+      .avatar {
+        grid-column: 1/7;
+        justify-self: center;
+      }
+
+      .username {
+        grid-column: 1/6;
+      }
+
+      .bio {
+        grid-column: 1/7;
+      }
+
+      .p-btn {
+        grid-row: 5;
+      }
+
+      .m-btn {
+        grid-column: 1/4;
+      }
+
+      .f-btn {
+        grid-column: 4/7;
+      }
+
+      #p-posts {
+        grid-column: 1/3;
+      }
+
+      #open-followings {
+        grid-column: 3/5;
+      }
+
+      #open-followers {
+        grid-column: 5/7;
+      }
+    }
+  }
+}
