--- a/templates/feed.html
+++ b/templates/feed.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% load static %}{% block content %}
+{% extends "base.html" %}
+{% load static %}{% block content %}
 <div id="dimmer"></div>
 <div class="container">
   <div class="feed">
@@ -9,7 +10,7 @@
       {% endif %}
       <div class="post-image-container">
         {% if post.photo %}
-        <img class="post-image" src="{{ post.photo.url }}" alt="image" />
+        <img class="post-image" src="{{ post.photo.url }}" alt="image" loading="lazy"/>
         {% else %}
         <p class="texts">Loading...</p>
         {% endif %}
@@ -19,7 +20,8 @@
         class="post-person-image"
         src="{{ i.avatar.url }}"
         alt="user_pp"
-        data-url="{% url 'profile' user.username %}"
+        data-url="{% url 'profile' i.user.username %}"
+        loading="lazy"
       />
       {% endfor %}
       <div class="post-ctx">
@@ -31,20 +33,28 @@
       <div class="interactions">
         <p class="texts post-like interact-container">
           <a href="{% url 'like' post.id %}">
+
+            {% if not post in liked_posts %}
             <img
               src="{% static 'images/icons/like.png' %}"
-              alt="like-icon" /></a
-          ><a href=""><b class="like-count">{{ post.likes_count }}</b></a>
+              alt="like-icon" loading="lazy"/>
+            {% else %}
+            <img
+            src="{% static 'images/icons/unlike.png' %}"
+            alt="like-icon" loading="lazy"/>
+            {% endif %}
+
+          </a><b class="like-count">{{ post.likes_count }}</b>
         </p>
         <p class="texts post-comment interact-container">
           <a href="{% url 'comments' post.id %}">
             <img
               src="{% static 'images/icons/comment.png' %}"
-              alt="comment-icon" /></a
+              alt="comment-icon" loading="lazy"/></a
           ><b class="comment-count">{{ post.comments_count }}</b>
         </p>
         <p class="texts post-share interact-container">
-          <img src="{% static 'images/icons/share.png' %}" alt="share-icon" />
+          <img src="{% static 'images/icons/share.png' %}" alt="share-icon" loading="lazy"/>
         </p>
       </div>
       <div class="delete-ensure">
@@ -58,6 +68,35 @@
         <button class="ensure-cancel texts" onclick="closeEnsure(this)">
           Cancel
         </button>
+      </div>
+
+      <div class="liked-popup">
+        <p class="back-btn texts">Close</p>
+        {% if post.likes_count == 0 %}
+        <p class="texts" style="padding-bottom: 1em;">No one has liked this post yet.</p>
+        {% endif %}
+        {% for u in post.post_likes.all %}
+        <div class="liked-user">
+          {% if not u.user.user_profile.all %}
+          <img
+            class="post-person-image"
+            src="{% static 'images/icons/person.png' %}"
+            alt="user_pp"
+            loading="lazy"
+            data-url="{% url 'profile' u.user.username %}"
+          />
+          {% endif %} {% for p in u.user.user_profile.all %}
+          <img
+            class="post-person-image"
+            src="{{ p.avatar.url }}"
+            alt="user_pp"
+            loading="lazy"
+            data-url="{% url 'profile' u.user.username %}"
+          />
+          {% endfor %}
+          <p class="texts"><b>{{ u.user.username }}</b> liked!</p>
+        </div>
+        {% endfor %}
       </div>
     </div>
     {% endfor %}
