--- a/templates/landing.html
+++ b/templates/landing.html
@@ -24,17 +24,29 @@
     <div class="wrapper">
       <div class="provides-item">
         <p class="texts">Socialize with your friends!</p>
-        <img src="{% static 'images/socialize.png' %}" alt="item-image" />
+        <img
+          src="{% static 'images/socialize.png' %}"
+          alt="item-image"
+          loading="lazy"
+        />
       </div>
 
       <div class="provides-item">
         <p class="texts">Keep up with the news around you!</p>
-        <img src="{% static 'images/news.png' %}" alt="item-image" />
+        <img
+          src="{% static 'images/news.png' %}"
+          alt="item-image"
+          loading="lazy"
+        />
       </div>
 
       <div class="provides-item">
         <p class="texts">Enjoy your time!</p>
-        <img src="{% static 'images/enjoy.png' %}" alt="item-image" />
+        <img
+          src="{% static 'images/enjoy.png' %}"
+          alt="item-image"
+          loading="lazy"
+        />
       </div>
     </div>
   </div>
@@ -72,6 +84,7 @@
         src="{% static 'images/postado-logo.png' %}"
         alt=""
         class="contact-image"
+        loading="lazy"
       />
       <p class="texts contact-mail">postadoteam@gmail.com</p>
     </div>
