--- a/static/sass/_comments.scss
+++ b/static/sass/_comments.scss
@@ -38,6 +38,12 @@
       object-fit: cover;
       border-radius: 100%;
       grid-row: 1/3;
+      cursor: pointer;
+
+      &:hover {
+        transform: scale(1.05);
+        box-shadow: 0 5px 1em rgba($dark, 0.3);
+      }
     }
   }
 }
@@ -104,7 +110,7 @@
   }
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 800px) {
   .comment-form-container {
     margin-bottom: 8em;
   }
