--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -25,15 +25,15 @@ body {
   }
 
   &::-webkit-scrollbar-track {
-    background: #212132;
+    background: $dark-bg-color;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: $light;
-    border-radius: 2px;
-    border: 3px solid transparent;
+    background-color: $primary-color;
+    border-radius: 0.2em;
+
     &:hover {
-      background: $primary-color;
+      background: $light-accent-color;
     }
   }
 }
@@ -89,13 +89,12 @@ body {
       font-weight: bold;
 
       &:hover {
-        text-shadow: 0 0 10px $primary-color;
+        text-shadow: 0 0 10px $deep-light;
       }
 
       img {
         width: 50px;
         height: 50px;
-        filter: invert(1);
       }
 
       .nav-profile {
@@ -134,10 +133,11 @@ body {
   bottom: 1em;
   right: 1em;
   border-radius: 1em 1em 0 1em;
-  background-color: rgba($light-bg-color, 0.4);
-  color: $deep-dark;
+  background-color: rgba($dark, 0.5);
+  color: $deep-light;
   backdrop-filter: blur(15px);
   z-index: 1;
+  box-shadow: 0 5px 10px rgba($deep-dark, 0.1);
 
   .dj-message-text {
     font-size: 1.5em;
@@ -160,9 +160,10 @@ body {
   padding: 1em 1em;
   font-size: 1em;
   color: $blue-color;
+  cursor: pointer;
 
   &:hover {
-    text-shadow: 0 0 1em rgba($blue-color, 0.5);
+    text-shadow: 0 0 10px $blue-color;
   }
 
   &::before {
@@ -196,7 +197,7 @@ body {
       text-decoration: none;
 
       &:hover {
-        text-shadow: 0 0 0.5em rgba($blue-color, 0.5);
+        text-shadow: 0 0 10px rgba($blue-color, 0.5);
       }
     }
   }
@@ -245,6 +246,7 @@ body {
     border-radius: 5px;
     background-color: $grey;
     font-size: 1.5em;
+    user-select: text;
 
     &[type="file"] {
       cursor: pointer;
@@ -307,6 +309,7 @@ body {
     font-size: 1em;
     overflow: auto;
     resize: none;
+    user-select: text;
 
     &:hover {
       outline: none !important;
@@ -356,6 +359,12 @@ body {
         }
       }
     }
+  }
+
+  .dj-message {
+    top: 1em;
+    bottom: inherit;
+    border-radius: 1em 0 1em 1em;
   }
 }
 
