--- a/templates/profile.html
+++ b/templates/profile.html
@@ -41,7 +41,7 @@
 
 <div class="popup-f popup-unactive" id="follower-popup">
   <p class="popup-close texts">Close</p>
-  {% if followings|length == 0 %}
+  {% if followers|length == 0 %}
   <p class="texts">There are no follower person</p>
   {% endif %}
   {% for u in followers %}
