--- a/static/sass/_feed.scss
+++ b/static/sass/_feed.scss
@@ -88,6 +88,7 @@
       flex-flow: column nowrap;
       justify-content: center;
       align-items: flex-start;
+      cursor: pointer;
 
       * {
         margin: 0.2em 0;
