--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,10 @@
             id="nav-img"
             loading="lazy"
         /></a>
-        <a href="#" class="nav-item titles" data-help="MESSAGES"
+        <a
+          href="{% url 'navigator' %}"
+          class="nav-item titles"
+          data-help="MESSAGES"
           ><img
             src="{% static 'images/icons/message.png' %}"
             alt=""
@@ -83,5 +86,6 @@
     {% include './alert.html' %}{% block content %} {% endblock content %}
 
     <script src="{% static 'js/index.js' %}"></script>
+    <script src="{% static 'js/post_copy.js' %}"></script>
   </body>
 </html>
