--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,9 +11,7 @@
       <b>{{ followings|length }}</b></p>
     <p class="titles p-i-text p-ff" id="open-followers">Followers 
       <b>{{ followers|length }}</b></p>
-    {% if user != profile.user %}
-    <button class="p-btn texts m-btn">Message</button>
-    {% else %}
+    {% if user == profile.user %}
     <button class="p-btn texts" id="p-edit" onclick=window.location.href=`{% url 'update_profile' %}`>Edit</button>
     {% endif %}
     {% if user == profile.user %} {% elif not is_following %}
