--- a/templates/explore.html
+++ b/templates/explore.html
@@ -22,7 +22,7 @@
       {% for i in post.user.user_profile.all %}
       <img class="post-person-image" src="{{ i.avatar.url }}" alt="user_pp" />
       {% endfor %}
-      <div class="post-ctx">
+      <div class="post-ctx" data-url="{% url 'detailed_post' post.id %}">
         <h1 class="texts post-username">{{ post.user.username }}</h1>
         <h2 class="texts post-title">{{ post.title }}</h2>
         <p class="texts post-content">{{ post.content }}</p>
@@ -32,7 +32,7 @@
             width: 100%;
             display: flex;
             flex-flow: row nowrap;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
           "
         >
